<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.login.IntroActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style=""/>

        <TextView
            android:id="@+id/tv_intro_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
            android:text="@string/team_board"
            style="@style/CustomToolbarTitleMain"
            android:textColor="@color/white"
            android:textSize="@dimen/intro_screen_title_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intro_screen_image_marginTop"
            android:contentDescription="@string/intro_image_content_description"
            android:src="@drawable/ic_task_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
            android:text="@string/intro_started_text"
            android:textColor="@color/white"
            android:textSize="@dimen/lets_get_started_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/intro_text_marginStartEnd"
            android:layout_marginTop="@dimen/intro_text_marginTop"
            android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
            android:text="@string/intro_started_text_description"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/intro_text_size" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_intro_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/bg_btn_round_blue"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_intro_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/bg_btn_round_blue"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_login_button_kakao"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/bg_login_kakao"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/ic_login_kakao"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center_horizontal|center_vertical"
                android:lineSpacingExtra="3sp"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/sign_in_kakao"
                android:textSize="15sp"
                android:textColor="#D9000000"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_login_button_email"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/bg_login_email"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/ic_email_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center_horizontal|center_vertical"
                android:lineSpacingExtra="3sp"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/sign_in_email"
                android:textSize="15sp"
                android:textColor="#D9000000"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>