<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cardName"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fromm_2"
        android:orientation="vertical"
        tools:context=".ui.carddetail.CardDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/fromm_2"
                android:elevation="@dimen/toolbar_elevation"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleTextAppearance="@style/CustomToolbarTitle" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/create_board_content_padding">

            <TextView
                android:id="@+id/tv_card_details_title"
                style="@style/CustomToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="작업 이름"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_card_details_card_name"
                style="@style/Widget.Teamboard.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_card_details_title">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name_card_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_input_border_round"
                    android:hint="@string/card_name"
                    android:inputType="text"
                    android:text="@{cardName}"
                    android:textColor="@color/white_dark"
                    android:textSize="@dimen/et_text_size"
                    app:setCursorToEnd="@{true}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_card_details_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:text="@string/card_details_hint"
                android:textColor="@color/board_text_secondary_color"
                android:textSize="@dimen/item_member_email_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_card_details_card_name"
                tools:text="@string/card_details_hint" />

            <TextView
                android:id="@+id/tv_card_details_subtitle"
                style="@style/CustomToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="작업 설정"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_details_tip" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/blue_gray_dark"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_card_details_subtitle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/label_color"
                        android:textColor="@color/board_text_color"
                        android:textSize="@dimen/card_details_label_text_size" />

                    <TextView
                        android:id="@+id/tv_select_label_color"
                        style="@style/CustomBodyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_value_marginTop"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/select_color" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                        android:text="@string/card_member"
                        android:textColor="@color/board_text_color"
                        android:textSize="@dimen/card_details_label_text_size" />

                    <TextView
                        android:id="@+id/tv_select_members"
                        style="@style/CustomBodyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_value_marginTop"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/select_members" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_selected_members_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_value_marginTop"
                        android:paddingBottom="5dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                        android:text="@string/due_date"
                        android:textColor="@color/board_text_color"
                        android:textSize="@dimen/card_details_label_text_size" />

                    <TextView
                        android:id="@+id/tv_select_due_date"
                        style="@style/CustomBodyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_details_value_marginTop"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/select_due_date" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update_card_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                android:background="@drawable/bg_btn_round_blue"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/done"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
