<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/fromm_5"
            app:cardCornerRadius="@dimen/dialog_member_cv_cornerRadius"
            app:cardElevation="@dimen/dialog_member_cv_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dialog_member_content_padding">

                <TextView
                    android:id="@+id/tvDialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dialog_member_title_padding"
                    android:text="@string/search_member"
                    android:textColor="@color/fromm_3"
                    android:textSize="@dimen/dialog_member_title_text_size"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/member_dialog_divider_height"
                    android:layout_marginTop="@dimen/member_dialog_divider_marginTopBottom"
                    android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                    android:background="@color/fromm_5" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Teamboard.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/member_dialog_til_email_marginTop"
                    app:helperTextTextColor="@color/fromm_3">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email_search_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_input_border_round"
                        android:hint="@string/search_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/fromm_4"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/member_dialog_action_layout_height"
                    android:layout_marginTop="@dimen/member_dialog_action_layout_marginTop"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_add"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/member_dialog_action_button_padding"
                        android:text="@string/add_member_action_invite"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/member_dialog_action_button_text_size" />

                    <TextView
                        android:id="@+id/tv_cancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/member_dialog_action_button_padding"
                        android:text="@string/cancel"
                        android:textColor="@color/fromm_4"
                        android:textSize="@dimen/member_dialog_action_button_text_size" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>
