<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fromm_2"
        android:orientation="vertical"
        tools:context=".ui.home.createboard.CreateBoardActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="@dimen/toolbar_elevation">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_create_board"
                app:titleTextAppearance="@style/CustomToolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/fromm_2"
                app:elevation="@dimen/toolbar_elevation"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title=" " />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/create_board_content_padding">

            <TextView
                android:id="@+id/tv_create_board_title"
                style="@style/CustomToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_board_title"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:elevation="@dimen/card_view_elevation"
                android:backgroundTint="@color/fromm_1"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_create_board_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <FrameLayout
                        android:id="@+id/fl_create_board_image"
                        android:layout_width="@dimen/my_profile_user_image_size"
                        android:layout_height="@dimen/my_profile_user_image_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_create_board_image"
                            android:layout_width="@dimen/my_profile_user_image_size"
                            android:layout_height="@dimen/my_profile_user_image_size"
                            android:contentDescription="@string/intro_image_content_description"
                            android:src="@drawable/ic_board_place_holder" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/overlayView"
                            android:layout_width="@dimen/my_profile_user_image_size"
                            android:layout_height="@dimen/my_profile_user_image_size"
                            android:src="@color/transparent_black" />

                        <ImageView
                            android:id="@+id/cameraIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_camera_30"
                            android:layout_gravity="center" />

                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Teamboard.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="@dimen/create_board_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_create_board_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input_border_round"
                            android:hint="@string/create_board_name"
                            android:inputType="text"
                            android:textColor="@color/white_dark"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                android:background="@drawable/bg_btn_round_blue"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/done"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
